Form alignment issue fixed

--- a/assets/front-end/sass/fluentform/index.scss
+++ b/assets/front-end/sass/fluentform/index.scss
@@ -51,3 +51,7 @@
 .eael-fluentform-section-break-content-left .ff-el-group.ff-el-section-break{ text-align: left; }
 .eael-fluentform-section-break-content-center .ff-el-group.ff-el-section-break{ text-align: center; }
 .eael-fluentform-section-break-content-right .ff-el-group.ff-el-section-break{ text-align: right; }
+
+.eael-contact-form.eael-fluent-form-wrapper.eael-contact-form-align-left { margin: 0 auto 0 0; }
+.eael-contact-form.eael-fluent-form-wrapper.eael-contact-form-align-center { float: none; margin: 0 auto; }
+.eael-contact-form.eael-fluent-form-wrapper.eael-contact-form-align-right { margin: 0 0 0 auto; }
